# flowWorkspace

./: .Rbuildignore  .gitignore  .travis.yml  DESCRIPTION  INSTALL  LICENSE  NAMESPACE  NEWS.md  README.md  _pkgdown.yml  cleanup  configure  configure.ac  configure.ac.bck  configure_bck  performance.R  test.R
.github/workflows/: build.yml
Meta/: vignette.rds
R/: .GatingSet_Methods.R.swp  AllClasses.R  AllExportMethods.R  AllGenerics.R  AllMethods.R  AllMethods.R.in  CytoArray.R  CytoArraySeed.R  GatingHierarchy-Methods.R  GatingHierarchyInternal-Methods.R  GatingHierarchy_Methods.R  GatingSet-Methods.R  GatingSetInternal-Methods.R  GatingSetList-Methods.R  GatingSetList_Methods.R  GatingSet_Methods.R  IO.R  InternalClasses.R  InternalMethods.R  RcppExports.R  add-Methods.R  add-methods.R  addGate.R  add_Methods.R  bitVector.R  copyNode.R  cpp11.R  cytoFrame.R  cytoSet.R  cytoctx.R  cytoexperiment.R  cytoframe.R  cytoset.R  deprecated.R  filterObject-Methods.R  filterObject-methods.R  filterObject_Methods.R  flowJoWorkspace-Methods.R  flowJoWorkspace_Methods.R  flowWorkspace2flowCore-methods.R  (+28 more)
docs/: 404.html  LICENSE-text.html  authors.html  index.html  pkgdown.yml
docs/articles/: HowToMergeGatingSet.html  flowWorkspace-Introduction.html  index.html
docs/news/: index.html
docs/reference/: GatingHierarchy-class.html  GatingSet-class.html  GatingSet-methods.html  GatingSetList-class.html  asinh_Gml2.html  asinhtGml2_trans.html  booleanFilter-class.html  brackets.html  cf_append_cols.html  cf_get_h5_file_path.html  cf_write_h5.html  cleanup_temp.html  compensate-cytoframe-matrix-method.html  compensate.html  compute_timestep.html  convert.html  convert_legacy.html  cs_add_cytoframe.html  cs_add_sample.html  cs_get_h5_file_path.html  cs_set_cytoframe.html  cyto_flow_coerce_methods.html  cyto_flow_conversions.html  cytoframe-keywords.html  cytoframe-labels.html  cytoframe.html  cytoset.html  estimateLogicle.GatingHierarchy.html  estimateLogicle.html  extract_cluster_pop_name_from_node.html  filterObject.html  filter_to_list.html  fix_channel_slash.html  flowJo_flog.html  flowWorkspace-deprecated.html  flowWorkspace-package.html  flowWorkspace.par.get.html  flowWorkspace.par.init.html  flow_breaks.html  flow_trans.html  (+87 more)
example/: test.R
inst/: NEWS  README
inst/doc/: flowWorkspace.Rnw
inst/extdata/: cytotrol_tcell_cytobank.xml  cytotrol_tcell_cytobank_counts.csv  empty_workspace_9.2.xml
inst/include/: GatingHierarchy.hpp  GatingSet.hpp  flowJoWorkspace.hpp  flowWorkspace.h  gate.hpp  populationNode.hpp  populationTree.hpp  workspace.hpp
inst/javascript/: showPlot.js
inst/tests/: GatingHierarchy-testSuite.R  GatingML-parsing-testSuite.R  GatingSet-testSuite.R  GatingSetList-testSuite.R  InternalTestSuite.R  flowJoWorkspace-testSuite.R  test-GatingHierarchy-accessors.R  test-GatingSet-accessors.R  test-archive.R  test-compensate.R  test-filterObject.R  test-misc.R  test-parseWorkspace.R  test-workspace_import.R
man/: ExportTSVAnalysis.Rd  GatingHierarchy-class.Rd  GatingSet-class.Rd  GatingSet-methods.Rd  GatingSetList-class.Rd  GatingSetList.Rd  add.Rd  archive.Rd  asinh.Gml2.Rd  asinh_Gml2.Rd  asinhtGml2_breaks.Rd  asinhtGml2_trans.Rd  booleanFilter-class.Rd  booleanFilter.Rd  brackets.Rd  cf_append_cols.Rd  cf_backend_type.Rd  cf_get_h5_file_path.Rd  cf_get_uri.Rd  cf_write_disk.Rd  cf_write_h5.Rd  cf_write_tile.Rd  char2booleanFilter.Rd  checkRedundantNodes.Rd  cleanup.Rd  cleanup_temp.Rd  clone.Rd  closeWorkspace.Rd  compare.counts.Rd  compensate-GatingSet-graphGML-method.Rd  compensate-cytoframe-matrix-method.Rd  compensate-flowSet-graphGML-method.Rd  compensate.Rd  compute_timestep.Rd  constructTree.Rd  convert.Rd  convert_backend.Rd  convert_gs_legacy.Rd  convert_legacy.Rd  copyGatingHierarchyFromTo.Rd  (+250 more)
man-roxygen/: template-depr_pkg.R
src/: GatingHierarchy.cpp  GatingHierarchy.hpp  GatingSet.cpp  GatingSet.hpp  GatingSet.pb.cc  GatingSet.pb.h  GatingSet.proto  Makefile  Makevars  Makevars.in  Makevars.ucrt  Makevars.win  POPINDICES.cpp  R_API.cpp  R_GatingHierarchy.cpp  R_GatingSet.cpp  RcppExports.cpp  bitOps.c  calibrationTable.cpp  compensation.cpp  cpp11.cpp  cytoctxAPI.cpp  cytoframeAPI.cpp  cytosetAPI.cpp  delimitedMessage.cpp  ellipse2points.cpp  flowData.cpp  flowJoWorkspace.cpp  flowJoWorkspace.hpp  flowWorkspace_cpp.doxyfile  flowWorkspace_types.h  gate.cpp  gate.hpp  getDescendants.cpp  getPopStats.cpp  getSingleCellExpression.cpp  getSplineCoefs.cpp  global.cpp  h5_error_r_handler.cpp  init.c  (+22 more)
src/boost_serialization/: README
src/include/: GatingHierarchy.hpp  GatingSet.hpp  POPINDICES.hpp  R_GatingHierarchy.hpp  R_GatingSet.hpp  calibrationTable.hpp  compensation.hpp  delimitedMessage.hpp  ellipse2points.hpp  flowData.hpp  flowJoWorkspace.hpp  flowWorkspace.h  gate.hpp  global.hpp  macFlowJoWorkspace.hpp  ncdfFlow.hpp  nodeProperties.hpp  populationNode.hpp  populationTree.hpp  spline.hpp  transformation.hpp  util.hpp  winFlowJoWorkspace.hpp  workspace.hpp  ws2gh.hpp  ws2gs.hpp  wsNode.hpp
src/pb/: GatingSet.pb.cc  GatingSet.pb.h  GatingSet.proto
src/serialization/: GatingSet_pb2.py
src/unitTest/: computeCalibrationTable.cpp  gatingSet_test.cpp  ncdfFlow.cpp  ncdfFlow.hpp  src.cpp  test_header.hpp
tests/: run-all.R  testthat.R
tests/testthat/: GatingHierarchy-testSuite.R  GatingSet-testSuite.R  GatingSetList-testSuite.R  IO-testSuite.R  InternalTestSuite.R  cleanup_temp.R  comp-trans-gs.R  convert-legacy.R  copy-gh.R  copy_gate.R  cytoframe-suite.R  cytoset-suite.R  filter_to_list.R  flowJoWorkspace-testSuite.R  gh_pop_move.R  gs-archive.R  gs-parsed.R  helper-expectResult.R  helper_equal_function.R  parallel_load_gs.R  pop-add.R  s3-gs.R  scale_gate.R  test-add.R  test-archive.R  test-cleanup.R  test-compensate.R  test-convert-legacy.R  test-copy-gh.R  test-copyNode.R  test-cytoframe.R  test-cytoset.R  test-filterObject.R  test-getPopStats.R  test-gs-archive.R  test-gs-parsed.R  test-main.R  (+11 more)
vignettes/: HowToMergeGatingSet.Rmd  HowToParseGatingML.Rmd  flowWorkspace-Introduction.Rmd  flowWorkspace.Rnw  plotGate.Rmd
(+69 files in other folders)
